--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <title>Responsive Webpage</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-     <!-- APP JS -->
+ 
 
 </head>
 <body>
     <div class="nav-bar">
+        <input type="checkbox" id="check">
         <div class="logo">Snapshot</div>
-        <ul class="nav-links">
+        <ul class="nav-links" id="nav-items">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-        <div class="menu-toggler" id="menu-toggler">
+        <label for="check" class="menu_toggler" >
 
             <i class="fas fa-bars menu__bar" id="menu-toggler" ></i>
 
-        </div>
+        </label>
     </div>
 
 
@@ -112,8 +113,6 @@
         </div>
         <h6>Copyright &copy; 2021 Zuri Training.</h6>
     </div>
-  
-    <script src="./js/app.js"></script>
    
 </body>
 </html>
